portfolio item sizing + overflow fix

--- a/src/app/assets/scss/_main.scss
+++ b/src/app/assets/scss/_main.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html, body {
+    position: relative;
     font: $primary-font;
     font-family: 'Eczar', serif;
     color: $limed-spruce;
@@ -10,6 +11,7 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 a {
