--- a/src/app/assets/scss/_portfolio.scss
+++ b/src/app/assets/scss/_portfolio.scss
@@ -12,7 +12,7 @@
     &__header {
         font-size: 18px;
         font-weight: bold;
-        padding: 30px 0;
+        padding: 30px 25px;
 
         @include less-than-tab-land {
             padding: 25px;
@@ -32,19 +32,15 @@
         }
 
         @include less-than-tab-land {
-            display: block;
-            padding: 0 25px;
+            flex-direction: column;
+            padding: 0;
         }
 
         li {
             box-sizing: border-box;
             list-style: none;
-            padding: 0 0 35px 35px;
+            padding: 0 25px;
             width: 25%;
-
-            &:first-child {
-                padding-left: 0;
-            }
 
             @include sm-desktop {
                 display: inline-flex;
@@ -59,17 +55,12 @@
             @include less-than-tab-land {
                 display: inline-flex;
                 width: 50%;
-                padding: 0 0 25px 25px;
-
-                &:first-child,
-                &:nth-child(3) {
-                    padding-left: 0;
-                }
+                padding: 20px
             }
 
             @include less-than-ipad {
                 display: flex;
-                padding: 10px 0;
+                padding: 15px;
                 width: 100%;
             }
         }
